# corgi-ecs

./: CMakeLists.txt  install.bat
.github/workflows/: Actions.yml
cmake/: Config.cmake.in
include/corgi/ecs/: ComponentPool.h  ComponentPools.h  EntityId.h  Scene.h
src/: ComponentPools.cpp  Entity.cpp  RefEntity.cpp  Scene.cpp
tests/: .CMakeLists.txt.swp  CMakeLists.txt
tests/src/: TestECS.cpp
